Travis does little

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ before_script:
   - Rscript -e "mauricer::install_beast2_pkg(\"NS\")"
 
 script:
-  - travis_wait 60 ./scripts/rerun.sh
+  - echo "Hello"
+  #- travis_wait 60 ./scripts/rerun.sh
 
 after_success:
   - Rscript -e "mcbette::mcbette_report()"
