--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: PirouetteExample30
+Package: pirprof
 Type: Package
-Title: Pirouette Example Thirty
-Version: 1.0
+Title: Pirouette Profile
+Version: 0.1
 Authors@R: c(
   person("Richel", "Bilderbeek", email = "richel@richelbilderbeek.nl", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1107-7049")))
 Author: Richel J.C. Bilderbeek <richel@richelbilderbeek.nl>
